implementation of error handler and swagger comments
