# docs/swagger.json
@@ -6,7 +6,7 @@
     "paths": {
         "/task/create": {
             "post": {
-                "description": "Create new task",
+                "description": "Create a new Task",
                 "consumes": [
                     "application/json"
                 ],
@@ -16,13 +16,12 @@
                 "tags": [
                     "Tasks"
                 ],
-                "summary": "Create new task",
+                "summary": "Create Task",
                 "parameters": [
                     {
-                        "description": "Request Body",
-                        "name": "Request",
+                        "description": "Request body",
+                        "name": "request",
                         "in": "body",
-                        "required": true,
                         "schema": {
                             "$ref": "#/definitions/handler.CreateTaskRequest"
                         }
@@ -32,19 +31,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.CreateTaskRequest"
+                            "$ref": "#/definitions/schemas.TaskResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/handler.CreateTaskRequest"
+                            "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/handler.CreateTaskRequest"
+                            "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     }
                 }
@@ -52,7 +51,7 @@
         },
         "/task/listAll": {
             "get": {
-                "description": "Get task by id",
+                "description": "List all Tasks",
                 "consumes": [
                     "application/json"
                 ],
@@ -62,24 +61,21 @@
                 "tags": [
                     "Tasks"
                 ],
-                "summary": "Get task by id",
+                "summary": "List Tasks",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.CreateTaskRequest"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/handler.CreateTaskRequest"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/handler.ListTasksResponse"
+                            }
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/handler.CreateTaskRequest"
+                            "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     }
                 }
@@ -87,7 +83,7 @@
         },
         "/task/{id}": {
             "get": {
-                "description": "Get task by id",
+                "description": "Show a Task",
                 "consumes": [
                     "application/json"
                 ],
@@ -97,13 +93,13 @@
                 "tags": [
                     "Tasks"
                 ],
-                "summary": "Get task by id",
+                "summary": "Show Task",
                 "parameters": [
                     {
                         "type": "string",
                         "description": "Task identification",
                         "name": "id",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -111,25 +107,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.CreateTaskRequest"
+                            "$ref": "#/definitions/handler.GetTaskByIdResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/handler.CreateTaskRequest"
+                            "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     },
-                    "500": {
-                        "description": "Internal Server Error",
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/handler.CreateTaskRequest"
+                            "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     }
                 }
             },
             "put": {
-                "description": "Update task",
+                "description": "Update a Task",
                 "consumes": [
                     "application/json"
                 ],
@@ -139,11 +135,18 @@
                 "tags": [
                     "Tasks"
                 ],
-                "summary": "Update task",
+                "summary": "Update Task",
                 "parameters": [
                     {
-                        "description": "Request Body",
-                        "name": "Request",
+                        "type": "string",
+                        "description": "Task Identification",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Task data to Update",
+                        "name": "task",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -155,25 +158,31 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.UpdateTaskRequest"
+                            "$ref": "#/definitions/handler.UpdateTaskResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/handler.UpdateTaskRequest"
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/handler.UpdateTaskRequest"
+                            "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     }
                 }
             },
             "delete": {
-                "description": "Delete task",
+                "description": "Delete Task",
                 "consumes": [
                     "application/json"
                 ],
@@ -183,13 +192,13 @@
                 "tags": [
                     "Tasks"
                 ],
-                "summary": "Delete task",
+                "summary": "Delete Task",
                 "parameters": [
                     {
                         "type": "string",
                         "description": "Task identification",
                         "name": "id",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -197,19 +206,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.CreateTaskRequest"
+                            "$ref": "#/definitions/handler.DeleteTaskResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/handler.CreateTaskRequest"
+                            "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     },
-                    "500": {
-                        "description": "Internal Server Error",
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/handler.CreateTaskRequest"
+                            "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     }
                 }
@@ -229,10 +238,54 @@
                 "dueDate": {
                     "type": "string"
                 },
-                "id": {
-                    "type": "integer"
-                },
                 "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.DeleteTaskResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/schemas.TaskResponse"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.GetTaskByIdResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/schemas.TaskResponse"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.ListTasksResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schemas.TaskResponse"
+                    }
+                },
+                "message": {
                     "type": "string"
                 }
             }
@@ -250,6 +303,46 @@
                     "type": "string"
                 },
                 "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.UpdateTaskResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/schemas.TaskResponse"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "schemas.TaskResponse": {
+            "type": "object",
+            "properties": {
+                "completed": {
+                    "type": "boolean"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "deteledAt": {
+                    "type": "string"
+                },
+                "dueDate": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "updatedAt": {
                     "type": "string"
                 }
             }
